Stub out go binary build and tests (#649)
* Stub out go binary build and tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
-language: bash
+language: go
+go:
+  - "1.12"
 sudo: required
 services:
   - docker
@@ -9,6 +11,7 @@ env:
   - TEST=cedar-14 STACK=cedar-14
   - TEST=hatchet
   - TEST=unit
+  - TEST=test-binary GO111MODULE=on
 install:
   - if [[ -n $STACK ]]; then
       docker pull "heroku/${STACK/-/:}";
