--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ services:
   - docker
 env:
   - TEST=shellcheck
-  - TEST=heroku-20 STACK=heroku-20
-  - TEST=heroku-18 STACK=heroku-18
-  - TEST=heroku-16 STACK=heroku-16
+  - TEST=heroku-20-build STACK=heroku-20-build
+  - TEST=heroku-18-build STACK=heroku-18-build
+  - TEST=heroku-16-build STACK=heroku-16-build
   - TEST=cedar-14 STACK=cedar-14
   - TEST=hatchet
   - TEST=unit
