--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,8 @@ orbs:
   shellcheck: circleci/shellcheck@1.3.16
 jobs:
   hatchet-test:
-    machine: true
+    docker:
+      - image: circleci/ruby:2.7.2
     steps:
       - checkout
       - run:
