--- a/inventory/node.toml
+++ b/inventory/node.toml
@@ -3774,6 +3774,13 @@ url = "https://s3.amazonaws.com/heroku-nodebin/node/release/linux-x64/node-v10.2
 etag = "5387220383fd6512e7cab92ef287426f-3"
 
 [[releases]]
+version = "10.23.2"
+channel = "release"
+arch = "linux-x64"
+url = "https://s3.amazonaws.com/heroku-nodebin/node/release/linux-x64/node-v10.23.2-linux-x64.tar.gz"
+etag = "f511a3763a63e7616fb608416e00a253-3"
+
+[[releases]]
 version = "10.3.0"
 channel = "release"
 arch = "linux-x64"
@@ -4542,6 +4549,13 @@ channel = "release"
 arch = "linux-x64"
 url = "https://s3.amazonaws.com/heroku-nodebin/node/release/linux-x64/node-v15.6.0-linux-x64.tar.gz"
 etag = "aeb1a459afa11e7fc482e0a672cf1fe2-4"
+
+[[releases]]
+version = "15.7.0"
+channel = "release"
+arch = "linux-x64"
+url = "https://s3.amazonaws.com/heroku-nodebin/node/release/linux-x64/node-v15.7.0-linux-x64.tar.gz"
+etag = "065a4833bd91372bf26a45a46820f77a-4"
 
 [[releases]]
 version = "4.0.0"
@@ -6649,6 +6663,13 @@ channel = "staging"
 arch = "linux-x64"
 url = "https://s3.amazonaws.com/heroku-nodebin/node/staging/linux-x64/node-v10.23.1-linux-x64.tar.gz"
 etag = "5387220383fd6512e7cab92ef287426f-3"
+
+[[releases]]
+version = "10.23.2"
+channel = "staging"
+arch = "linux-x64"
+url = "https://s3.amazonaws.com/heroku-nodebin/node/staging/linux-x64/node-v10.23.2-linux-x64.tar.gz"
+etag = "f511a3763a63e7616fb608416e00a253-3"
 
 [[releases]]
 version = "10.9.0"
