--- a/inventory/yarn.toml
+++ b/inventory/yarn.toml
@@ -517,6 +517,18 @@ url = "https://s3.amazonaws.com/heroku-nodebin/yarn/release/yarn-v1.22.15.tar.gz
 etag = "4113da7ab81a77fb30f74737a459a225"
 
 [[releases]]
+version = "1.22.16"
+channel = "release"
+url = "https://s3.amazonaws.com/heroku-nodebin/yarn/release/yarn-v1.22.16.tar.gz"
+etag = "f2cde1b4c22eae2885f2dcdd766ff1e6"
+
+[[releases]]
+version = "1.22.17"
+channel = "release"
+url = "https://s3.amazonaws.com/heroku-nodebin/yarn/release/yarn-v1.22.17.tar.gz"
+etag = "291fea6d3b993c201b946ab566de816c"
+
+[[releases]]
 version = "1.22.4"
 channel = "release"
 url = "https://s3.amazonaws.com/heroku-nodebin/yarn/release/yarn-v1.22.4.tar.gz"
