--- a/spec/fixtures/repos/yarn2-pnp-zero-install/package.json
+++ b/spec/fixtures/repos/yarn2-pnp-zero-install/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yarn-pnp-nonzero-install",
+  "name": "yarn2-pnp-zero-install",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
